flo: enable wiimote support
Change-Id: I7c17e096739edc5ebddcd1f2be0f2dd03a605bd1

--- a/arch/arm/configs/cyanogen_flo_defconfig
+++ b/arch/arm/configs/cyanogen_flo_defconfig
@@ -2670,7 +2670,7 @@ CONFIG_HID_THRUSTMASTER=y
 # CONFIG_THRUSTMASTER_FF is not set
 CONFIG_HID_WACOM=y
 # CONFIG_HID_WACOM_POWER_SUPPLY is not set
-# CONFIG_HID_WIIMOTE is not set
+CONFIG_HID_WIIMOTE=y
 CONFIG_HID_ZEROPLUS=y
 # CONFIG_ZEROPLUS_FF is not set
 CONFIG_HID_ZYDACRON=y
