Revert "flo: Disable transparent compression"
This reverts commit 24092b3b4f77771e98690ce71f05e04eb35ae48c.

Change-Id: I1ad55bdf61a5e936bb3d67a57f7e8599c5f5f81d

--- a/arch/arm/configs/cyanogen_flo_defconfig
+++ b/arch/arm/configs/cyanogen_flo_defconfig
@@ -3177,7 +3177,7 @@ CONFIG_IOMMU_PGTABLES_L2=y
 #
 # File systems
 #
-# CONFIG_FS_TRANSPARENT_COMPRESSION is not set
+CONFIG_FS_TRANSPARENT_COMPRESSION=y
 # CONFIG_EXT2_FS is not set
 # CONFIG_EXT3_FS is not set
 CONFIG_EXT4_FS=y
