msm_kcal_ctrl: initial code for generic MSM LCD temperature calibrations
this should be compatible with all MDP devices from Qualcomm

Change-Id: I7f6a17feb3b582d9eb1241a50fe5c17dc2856fb9
Signed-off-by: Paul Reioux <reioux@gmail.com>

--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -2644,4 +2644,16 @@ config MSM_USE_USER_ACCESSIBLE_TIMERS
 	  Enables MSM-specific user accessible timers via a shared
 	  memory page containing the cycle counter.
 
+config UPDATE_LCDC_LUT
+        bool "Set initial Qualcomm LCDC lut"
+        default n
+        help
+          Set initial Qualcomm LCDC Look Up Table.
+
+config LCD_KCAL_STANDALONE
+        tristate "MSM generic LCDC Calibration"
+        default n
+        help
+          Enable MSM generic LCDC temperature Calibration.
+
 endif
