deb/flo: Enable MSM LCD Temperature Calibration
Change-Id: I4bbc75f13cc48337d6174a00c610fcfb6ff9fd8a

--- a/arch/arm/configs/cyanogen_flo_defconfig
+++ b/arch/arm/configs/cyanogen_flo_defconfig
@@ -386,6 +386,8 @@ CONFIG_BOARD_HEADER_FILE=""
 # LGE Specific Patches
 #
 # CONFIG_LGE_CRASH_HANDLER is not set
+CONFIG_UPDATE_LCDC_LUT=y
+CONFIG_LCD_KCAL_STANDALONE=y
 CONFIG_MACH_ASUSTEK=y
 
 #
