Modify access rules

--- a/project.config
+++ b/project.config
@@ -1,7 +1,7 @@
 [project]
 [submit]
 	action = rebase if necessary
-[access "refs/heads/*"]
+[access "refs/heads/cm-13.0-caf"]
 	create = group deb maintainers
 	forgeAuthor = group deb maintainers
 	forgeCommitter = group deb maintainers
