--- a/project.config
+++ b/project.config
@@ -2,10 +2,10 @@
 [submit]
 	action = rebase if necessary
 [access "refs/heads/cm-13.0-caf"]
-	create = group deb maintainers
 	forgeAuthor = group deb maintainers
 	forgeCommitter = group deb maintainers
 	push = group deb maintainers
 	label-Code-Review = -2..+2 group deb maintainers
 	label-Verified = -1..+1 group deb maintainers
 	submit = group deb maintainers
+	rebase = group deb maintainers
