Modify access rules

--- a/project.config
+++ b/project.config
@@ -1,11 +1,11 @@
 [project]
 [submit]
 	action = rebase if necessary
-[access "refs/heads/cm-13.0-caf"]
+[access "refs/heads/*"]
 	forgeAuthor = group deb maintainers
 	forgeCommitter = group deb maintainers
 	push = group deb maintainers
 	label-Code-Review = -2..+2 group deb maintainers
 	label-Verified = -1..+1 group deb maintainers
-	submit = group deb maintainers
 	rebase = group deb maintainers
+	submit = group deb maintainers
