Modify access rules

--- a/project.config
+++ b/project.config
@@ -9,3 +9,4 @@
 	label-Verified = -1..+1 group deb maintainers
 	rebase = group deb maintainers
 	submit = group deb maintainers
+	create = group deb maintainers
