--- a/arch/arm/configs/cyanogenmod_flo_defconfig
+++ b/arch/arm/configs/cyanogenmod_flo_defconfig
@@ -95,6 +95,7 @@ CONFIG_SMP=y
 CONFIG_SCHED_MC=y
 CONFIG_PREEMPT=y
 CONFIG_AEABI=y
+# CONFIG_OABI_COMPAT is not set
 CONFIG_HIGHMEM=y
 CONFIG_COMPACTION=y
 CONFIG_SECCOMP=y
@@ -373,7 +374,6 @@ CONFIG_VIDEO_HELPER_CHIPS_AUTO=y
 CONFIG_USB_VIDEO_CLASS=y
 CONFIG_V4L_PLATFORM_DRIVERS=y
 CONFIG_MSM_WFD=y
-# CONFIG_RADIO_IRIS is not set
 CONFIG_ION=y
 CONFIG_ION_MSM=y
 CONFIG_MSM_KGSL=y
